--- a/排序算法/排序算法.md
+++ b/排序算法/排序算法.md
@@ -18,11 +18,11 @@
 
 #### 		算法分类
 
-![1](https://github.com/msbbigdata/javase/blob/master/image/1.jpg)
+![1](https://github.com/YoYopupunsi/PicGoImgbed/blob/main/posts/20210311223148.jpg?raw=true)
 
 #### 		算法总结
 
-![2](https://github.com/msbbigdata/javase/blob/master/image/2.jpg)
+![2](https://github.com/YoYopupunsi/PicGoImgbed/blob/main/posts/20210311223728.jpg?raw=true)
 
 ### 3、冒泡排序
 
@@ -42,7 +42,7 @@
 
 #### 		（3）动图演示
 
-![3](https://github.com/msbbigdata/javase/blob/master/image/3.jpg)
+![3](https://github.com/YoYopupunsi/PicGoImgbed/blob/main/posts/20210311223751.jpg?raw=true)
 
 #### 		（4）代码演示
 
@@ -77,7 +77,7 @@ public static void bubbleSort(int array[]) {
 
 #### （3）动态图演示
 
-![4](https://github.com/msbbigdata/javase/blob/master/image/4.jpg)
+![4](https://github.com/YoYopupunsi/PicGoImgbed/blob/main/posts/20210311223802.jpg?raw=true)
 
 #### （4）代码演示
 
@@ -118,7 +118,7 @@ public static void selectionSort(int[] array) {
 
 #### （3）动态图演示
 
-![img](https://github.com/msbbigdata/javase/blob/master/image/5.jpg)
+![img](https://github.com/YoYopupunsi/PicGoImgbed/blob/main/posts/20210311223809.jpg?raw=true)
 
 #### （4）代码演示
 
@@ -153,7 +153,7 @@ public static void insertionSort(int[] array) {
 
 #### （3）动态图演示
 
-![img](https://github.com/msbbigdata/javase/blob/master/image/6.jpg)
+![6](https://github.com/YoYopupunsi/PicGoImgbed/blob/main/posts/20210311223816.jpg?raw=true)
 
 #### （4）代码演示
 
@@ -198,7 +198,7 @@ public static void insertionSort(int[] array) {
 
 #### 	（3）动态图演示
 
-![img](https://github.com/msbbigdata/javase/blob/master/image/7.jpg)
+![7](https://github.com/YoYopupunsi/PicGoImgbed/blob/main/posts/20210311223849.jpg?raw=true)
 
 #### 	（4）代码演示
 
@@ -268,7 +268,7 @@ public static void insertionSort(int[] array) {
 
 #### （3）动态图演示
 
-![img](https://github.com/msbbigdata/javase/blob/master/image/8.jpg)
+![8](https://github.com/YoYopupunsi/PicGoImgbed/blob/main/posts/20210311223856.jpg?raw=true)
 
 #### （4）代码演示
 
@@ -314,7 +314,7 @@ public static void insertionSort(int[] array) {
 
 #### （3）动态图演示
 
-![img](https://github.com/msbbigdata/javase/blob/master/image/9.jpg)
+![img](https://github.com/YoYopupunsi/PicGoImgbed/blob/main/posts/20210311223902.jpg?raw=true)
 
 #### （4）代码演示
 
@@ -368,7 +368,7 @@ public static void insertionSort(int[] array) {
 
 #### （3）动态图演示
 
-![](https://github.com/msbbigdata/javase/blob/master/image/10.jpg)
+![](https://github.com/YoYopupunsi/PicGoImgbed/blob/main/posts/20210311223902.jpg?raw=true)
 
 #### （4）代码演示
 
@@ -431,7 +431,7 @@ public static void insertionSort(int[] array) {
 
 #### （3）动态图演示
 
-![img](https://github.com/msbbigdata/javase/blob/master/image/11.jpg)
+![img](https://github.com/YoYopupunsi/PicGoImgbed/blob/main/posts/20210311223904.jpg?raw=true)
 
 #### （4）代码演示
 
@@ -488,7 +488,7 @@ public static void insertionSort(int[] array) {
 
 #### （3）动态图演示
 
-![img](https://github.com/msbbigdata/javase/blob/master/image/12.jpg)
+![img](https://github.com/YoYopupunsi/PicGoImgbed/blob/main/posts/20210311223907.jpg?raw=true)
 
 #### （4）代码演示
 
